# aoc2024

./: pyproject.toml
day1/: part1.py  part2.py
day10/: part1.py  part2.py
day11/: part1.py  part2.py
day12/: part1.py  part2.py
day13/: part1.py  part2.py
day2/: part1.py  part2.py
day3/: part1.py
day4/: part1.py  part2.py
day5/: part1.py  part2.py  utils.py
day6/: part1.py  part2.py  part2r2.py
day7/: part1.py  part2.py
day8/: part1.py  part2.py
day9/: part1.py  part2.py  part2r2.py
